@@ -12,6 +12,7 @@ These interfaces are:
 
 from zope import interface
 
+# Should be removed
 
 class IDiagramItem(interface.Interface):
     """A diagram element"""
@@ -31,6 +32,7 @@ class IClassItem(INamedItem):
 class IAttributeItem(INamedItem):
     """A view on an attribute (part of a class, interface etc.)."""
 
+# until here..
 
 class IEditor(interface.Interface):
     """Provide an interface for editing text. with the TextEditTool.
@@ -60,6 +62,37 @@ class IEditor(interface.Interface):
     def key_pressed(self, pos, key):
         """Called every time a key is pressed. Allows for 'Enter' as escape
         character in single line editing.
+        """
+
+class IConnect(interface.Interface):
+    """This interface is used by the HandleTool to allow connecting
+    lines to element items. For each specific case (Line, Element) an
+    adapter could be written.
+    """
+
+    def connect(self, handle, x, y):
+        """Connect a line's handle to element.
+        x and y are translated to the element the handle is connecting to.
+
+        Note that at the moment of the connect, handle.connected_to may point
+        to some other item. The implementor should do the disconnect of
+        the other element themselves.
+        """
+
+    def disconnect(self, handle):
+        """Disconnect a line's handle from an element.
+        """
+
+    def full_disconnect(self, handle):
+        """Disconnect a handle.connected_to from an element. This requires
+        that the relationship is also removed at model level.
+        """
+
+    def glue(self, handle, x, y):
+        """Determine if a handle can glue to a specific element.
+
+        Returns a tuple (x, y) if the line and element may connect, None
+        otherwise.
         """
 
 # vim: sw=4:et:ai
